rakuten/enforce-https-services/.chainsaw-test/service-bad.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bad-protocol-service
spec:
  selector:
    app: my-app
  ports:
    - port: 5000
      targetPort: 5000
      protocol: UDP
---
apiVersion: v1
kind: Service
metadata:
  name: bad-protocol-service-2
spec:
  selector:
    app: my-app
  ports:
    - port: 443
      targetPort: 443
      protocol: HTTP
---
apiVersion: v1
kind: Service
metadata:
  name: bad-http-service
spec:
  selector:
    app: my-app
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
