rakuten/enforce-https-services/.chainsaw-test/chainsaw-step-01-assert-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: enforce-https-services
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
